kubernetes/apps/media/romm/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: romm-egress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: romm
  egress:
    - toFQDNs:
        - matchName: gamesdb.launchbox-app.com
        - matchName: hasheous.org
        - matchName: howlongtobeat.com
        - matchName: id.twitch.tv
        - matchName: images.launchbox-app.com
        - matchName: playmatch.retrorealm.dev
        - matchName: raw.githubusercontent.com
        - matchName: steamgriddb.com
        - matchName: thumbnails.libretro.com
        - matchPattern: "*.steamgriddb.com"
        - matchPattern: "*.screenscraper.fr"
        - matchPattern: "*.igdb.com"
      toPorts:
        - ports:
            - port: "443"
